--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -696,7 +696,7 @@ updates:
   - package-ecosystem: pip
     directory: /docker/syslog
     schedule:
-     interval: daily
+      interval: daily
   - package-ecosystem: pip
     directory: /docker/accessdata
     schedule:
@@ -711,5 +711,9 @@ updates:
       interval: daily
   - package-ecosystem: pip
     directory: /docker/py3-tools
+    schedule:
+      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/parse-emails
     schedule:
       interval: daily
