Revert "disable the end"
This reverts commit 273e00ad49466c23b0db5c3705fc32a8fa4b9b35.

--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -37,7 +37,7 @@ RUN apt-get update -y \
     && echo 'export PATH="$GOROOT/bin:$PATH"' >> ~/.bashrc \
     && echo 'export PATH="$PATH:$GOPATH/bin"' >> ~/.bashrc \
     && source ~/.bashrc \
-    && goenv install 1.13.8 
-    # && goenv global 1.13.8 \
-    # && source ~/.bashrc \
-    # && curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.40.1
+    && goenv install 1.13.8 \
+    && goenv global 1.13.8 \
+    && source ~/.bashrc \
+    && curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.40.1
