--- a/docker/circleci/Dockerfile
+++ b/docker/circleci/Dockerfile
@@ -5,6 +5,4 @@ COPY requirements.txt .
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
   && pip install --no-cache-dir -r requirements.txt \
-  && apk del .build-dependencies \
-  && pip install virtualenv --upgrade
-
+  && apk del .build-dependencies 
