--- a/docker/tesseract/Dockerfile
+++ b/docker/tesseract/Dockerfile
@@ -30,3 +30,15 @@ RUN apt-get update && apt-get -t buster-backports install -y --no-install-recomm
   imagemagick \
   file \
   && rm -rf /var/lib/apt/lists/*
+
+# Python packages not needed
+# COPY requirements.txt .
+
+# RUN apt-get update && apt-get install -y --no-install-recommends \
+#   gcc \
+#   python3-dev \
+# && pip install --no-cache-dir -r requirements.txt \
+# && apt-get purge -y --auto-remove \
+#   gcc \
+#   python3-dev \
+# && rm -rf /var/lib/apt/lists/*
