changed folder name to - scripts

--- a/docker/nmap/Dockerfile
+++ b/docker/nmap/Dockerfile
@@ -3,7 +3,7 @@ FROM demisto/python3:3.9.6.22912
 
 RUN mkdir /opt/security-team-scripts
 
-COPY security-team-scripts /opt/security-team-scripts
+COPY scripts /opt/scripts
 
 COPY requirements.txt .
 
