Added scripts to docker (#6991)
* added scripts to docker

* adding new script

* changed folder name to - scripts

* fix little bug

* added new script

--- a/docker/nmap/Dockerfile
+++ b/docker/nmap/Dockerfile
@@ -1,6 +1,10 @@
 
 FROM demisto/python3:3.9.6.22912
 
+RUN mkdir /opt/scripts
+
+COPY scripts /opt/scripts
+
 COPY requirements.txt .
 
 RUN apk --update add --no-cache nmap nmap-scripts
