--- a/docker/ml/Dockerfile.ironbank
+++ b/docker/ml/Dockerfile.ironbank
@@ -1,28 +1,43 @@
-FROM alpine:3.12.3 as files-src
+ARG BASE_REGISTRY=registry1.dso.mil
+ARG BASE_IMAGE=ironbank/redhat/ubi/ubi8
+ARG BASE_TAG=8.5
+
+
+FROM registry1.dso.mil/ironbank/redhat/ubi/ubi8-minimal:8.5 AS files-src
+
 RUN mkdir /ml
 COPY ./encrypted_model.b /ml/encrypted_model.b
+
 RUN chmod -R 775 /ml
 
-FROM demisto/python3-deb:3.9.6.22912
+FROM ${BASE_REGISTRY}/${BASE_IMAGE}:${BASE_TAG}
 
 COPY requirements.txt .
 
-RUN apt-get update \
-&& apt-get install -y --no-install-recommends \
-  gcc \
-  python3-dev gfortran wget git g++ pkg-config libhdf5-dev \
-&& pip install --no-cache-dir -r requirements.txt \
-&& pip install torch==1.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html\
-&& apt-get purge -y --auto-remove gcc \
-  python3-dev gfortran wget git g++ pkg-config libhdf5-dev
-COPY demisto_ml-0.2.tar.gz .
-RUN pip install demisto_ml-0.2.tar.gz
-RUN rm -rf /var/lib/apt/lists/*
-RUN python -m spacy download en_core_web_sm
+RUN mkdir ./pip-pkgs
+COPY *.* ./pip-pkgs/
+
+COPY --from=files-src --chown=demisto:demisto /ml ./pip-pkgs
+
+USER root
+
+RUN dnf upgrade -y && dnf install -y --nodocs python3-devel gcc gcc-c++ make wget git gcc-gfortran.x86_64 pkg-config && \
+        pip install --no-cache-dir --no-index --find-links ./pip-pkgs/ -r requirements.txt &&  \
+        pip install ./pip-pkgs/torch-1.9.0%2Bcpu-cp39-cp39-linux_x86_64.whl && \
+        pip install ./pip-pkgs/demisto_ml-0.2.tar.gz && \
+        pip install ./pip-pkgs/en_core_web_sm-3.2.0.tar.gz && \
+        mkdir -p /ml/nltk_data/tokenizers && \
+        mkdir -p /ml/nltk_data/corpora && \
+        unzip ./pip-pkgs/punkt.zip -d /ml/nltk_data/tokenizers && \
+        unzip ./pip-pkgs/wordnet.zip -d /ml/nltk_data/corpora && \
+        unzip ./pip-pkgs/stopwords.zip -d /ml/nltk_data/corpora && \
+        dnf remove -y python3-devel gcc gcc-c++ make wget git gcc-gfortran.x86_64 pkg-config libhdf5-dev && \
+        dnf clean all && \
+        rm -rf /var/cache/dnf && \
+        rm -rf ./pip-pkgs
 RUN mkdir /ml
-RUN python -c "import nltk; nltk.download('stopwords', download_dir='/ml/nltk_data'); nltk.download('punkt',download_dir='/ml/nltk_data')"
 ENV NLTK_DATA='/ml/nltk_data'
 ENV MPLCONFIGDIR='/ml/matplotlib'
 COPY oob_evaluation.txt /ml
-RUN chown -R demisto:demisto /ml && chmod -R 775 /ml
 COPY --from=files-src --chown=demisto:demisto /ml /ml
+RUN chown -R demisto:demisto /ml && chmod -R 775 /ml
