--- a/docker/slackv3/Pipfile
+++ b/docker/slackv3/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-slack-sdk = {version = "*", extras = "== 'optional'"}
+slack-sdk = {version = "*", extras =["optional"]}
 aiohttp = "*"
 
 [dev-packages]
