--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -717,3 +717,7 @@ updates:
     directory: /docker/parse-emails
     schedule:
       interval: daily
+  - package-ecosystem: pip
+    directory: /docker/demisto-sdk
+    schedule:
+     interval: daily
