added env vars, ignore pylint

--- a/docker/demisto-sdk/Dockerfile
+++ b/docker/demisto-sdk/Dockerfile
@@ -21,3 +21,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Work in content folder
 WORKDIR /content
+
+# Environment variables for demisto-sdk upload/download/run etc...
+ENV DEMISTO_BASE_URL="https://127.0.0.1:8443"
+ENV DEMISTO_API_KEY="XXXXXXXXXXX"
+ENV DEMISTO_VERIFY_SSL=true
+
+# Default demisto-sdk help
+CMD ["demisto-sdk", "--help"]
