changing to bullseye-backports

--- a/docker/chromium/Dockerfile
+++ b/docker/chromium/Dockerfile
@@ -1,5 +1,5 @@
 # Last modified: Sat, 30 Oct 2021 15:07:45 +0000
-FROM demisto/python3-deb:3.9.9.25782
+FROM demisto/python3-deb:3.10.1.26244
 
 COPY requirements.txt .
 
@@ -28,7 +28,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY download_chromedriver.sh .
 
 # Deps needed by google-chrome
-RUN apt-get update && apt-get -t buster-backports install -y --no-install-recommends \
+RUN apt-get update && apt-get -t bullseye-backports install -y --no-install-recommends \
   gnupg1 \
   libgtk-3-0 \
   libu2f-udev \
