updating the chromium docker to have latest version of google chrome with the latest relese from Feb,14 https://chromereleases.googleblog.com/2022/02/stable-channel-update-for-desktop_14.html (#7078)
* updating the chromium docker to have latest version of google chrome with the latest relese from Feb,14 https://chromereleases.googleblog.com/2022/02/stable-channel-update-for-desktop_14.html

* libappindicator1 is missing in bullseye as here https://github.com/signalapp/Signal-Desktop/issues/4761

* installaing libappindicator1 deps

* changing to bullseye-backports

* fixing typo

* there is one more security update https://chromereleases.googleblog.com/search/label/Stable%20updates

* trying to get the other relase from Feb. 17 2022 (98.0.4758.107)

* One more try to get the latest version of chrome which include the latest security release

* try to recompile to get one more security release that was fixed couple of days ago

--- a/docker/chromium/Dockerfile
+++ b/docker/chromium/Dockerfile
@@ -1,5 +1,5 @@
-# Last modified: Sat, 30 Oct 2021 15:07:45 +0000
-FROM demisto/python3-deb:3.9.7.24076
+# Last modified: Sun, 20 Feb 2022 10:16:15 +0000
+FROM demisto/python3-deb:3.10.1.26244
 
 COPY requirements.txt .
 
@@ -7,11 +7,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   python3-dev \
   wget \
   libxss1 \
-  libappindicator1 \
   poppler-utils \
   fonts-noto-cjk \
   fonts-noto-core \
   zlib1g-dev \
+&& wget http://http.us.debian.org/debian/pool/main/liba/libappindicator/libappindicator1_0.4.92-7_amd64.deb -O /tmp/libappindicator1_0.4.92-7_amd64.deb \
+&& wget http://http.us.debian.org/debian/pool/main/libi/libindicator/libindicator7_0.5.0-4_amd64.deb -O /tmp/libindicator7_0.5.0-4_amd64.deb \
+&& apt-get install -y  /tmp/libindicator7_0.5.0-4_amd64.deb /tmp/libappindicator1_0.4.92-7_amd64.deb \
 && pip3 install --no-cache-dir -r requirements.txt \
 && apt-get purge -y --auto-remove \
   python3-dev \
@@ -26,7 +28,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY download_chromedriver.sh .
 
 # Deps needed by google-chrome
-RUN apt-get update && apt-get -t buster-backports install -y --no-install-recommends \
+RUN apt-get update && apt-get -t bullseye-backports install -y --no-install-recommends \
   gnupg1 \
   libgtk-3-0 \
   libu2f-udev \
