--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -41,3 +41,4 @@ RUN apt-get update -y \
     && goenv global 1.13.8 \
     && source ~/.bashrc \
     && curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.40.1
+    && sudo update-ca-certificates
