--- a/docker/py3ews/Dockerfile
+++ b/docker/py3ews/Dockerfile
@@ -7,4 +7,4 @@ RUN apk --update add --no-cache libxslt-dev \
   && apk --update add --no-cache --virtual .build-dependencies python3-dev gcc build-base wget git libffi-dev openssl-dev python3-dev libxml2-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies \
-  && apt-get purge -y --auto-remove gcc
+  && apk del gcc
