--- a/docker/py3ews/Dockerfile
+++ b/docker/py3ews/Dockerfile
@@ -6,5 +6,4 @@ COPY requirements.txt .
 RUN apk --update add --no-cache libxslt-dev \
   && apk --update add --no-cache --virtual .build-dependencies python3-dev gcc build-base wget git libffi-dev openssl-dev python3-dev libxml2-dev \
   && pip install --no-cache-dir -r requirements.txt \
-  && apk del .build-dependencies \
-  && apk del gcc
+  && apk del .build-dependencies
