--- a/docker/pyjwt3/Dockerfile
+++ b/docker/pyjwt3/Dockerfile
@@ -3,6 +3,6 @@ FROM demisto/crypto:1.0.0.27243
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev gcc build-base wget git \
+RUN apk --update add --no-cache --virtual .build-dependencies python3-dev libffi-dev gcc build-base wget git \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
