bootstrap: added force install + python 3.10 support

--- a/docker/demisto-sdk/Dockerfile
+++ b/docker/demisto-sdk/Dockerfile
@@ -2,7 +2,7 @@ FROM demisto/python3-deb:3.10.1.26968
 
 SHELL ["/bin/bash", "-c"]
 
-USER root
+# USER root
 
 ADD panw-cert.pem /usr/local/share/ca-certificates
 RUN chmod 644 /usr/local/share/ca-certificates/panw-cert.pem && update-ca-certificates
@@ -28,19 +28,21 @@ RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /
     $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null \
     && apt-get update && apt-get install docker-ce-cli -y
 
+
 WORKDIR /content
 
 # Install node modules for readme validation in demisto-sdk validate
-ADD https://raw.githubusercontent.com/demisto/demisto-sdk/master/package.json .
-ADD https://raw.githubusercontent.com/demisto/demisto-sdk/master/package-lock.json .
+ADD https://raw.githubusercontent.com/demisto/demisto-sdk/master/package.json /content/
+ADD https://raw.githubusercontent.com/demisto/demisto-sdk/master/package-lock.json /content/
 
 # Python requirements
 # COPY requirements.txt .
-RUN npm ci 
+RUN echo $(pwd)
+RUN npm install && python3 -m pip install virtualenv
 # && python3 -m pip install --no-cache-dir -r requirements.txt && rm requirements.txt
 
-ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py3.txt dev-requirements-py3.txt
-ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py2.txt dev-requirements-py2.txt
+ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py3.txt /content/dev-requirements-py3.txt
+ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py2.txt /content/dev-requirements-py2.txt
 ADD bootstrap /content/bootstrap
 RUN chmod +x bootstrap && NO_HOOKS=1 SETUP_PY2=yes FORCE_SETUP=yes NO_NPM=true ./bootstrap && rm bootstrap
 
