include TestSuite in the setup

--- a/docker/demisto-sdk/Dockerfile
+++ b/docker/demisto-sdk/Dockerfile
@@ -2,10 +2,9 @@ FROM demisto/python3-deb:3.10.1.26968
 
 SHELL ["/bin/bash", "-c"]
 
-# USER root
-
 ADD panw-cert.pem /usr/local/share/ca-certificates
 RUN chmod 644 /usr/local/share/ca-certificates/panw-cert.pem && update-ca-certificates
+
 
 RUN apt-get update && apt-get install \
     git \ 
@@ -16,11 +15,7 @@ RUN apt-get update && apt-get install \
     curl \
     gnupg \
     lsb-release \
-    python2 \
     -y 
-
-ADD https://bootstrap.pypa.io/pip/2.7/get-pip.py get-pip.py
-RUN python2 get-pip.py && rm get-pip.py
 
 # Docker cli tools installation
 RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg \
@@ -31,20 +26,20 @@ RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /
 
 WORKDIR /content
 
+# RUN git config --global http.sslVerify false
+
 # Install node modules for readme validation in demisto-sdk validate
 ADD https://raw.githubusercontent.com/demisto/demisto-sdk/master/package.json /content/
 ADD https://raw.githubusercontent.com/demisto/demisto-sdk/master/package-lock.json /content/
 
 # Python requirements
-# COPY requirements.txt .
-RUN echo $(pwd)
-RUN npm install && python3 -m pip install virtualenv
-# && python3 -m pip install --no-cache-dir -r requirements.txt && rm requirements.txt
+COPY requirements.txt .
+RUN npm ci && python3 -m pip install --no-cache-dir -r requirements.txt && rm requirements.txt
 
 ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py3.txt /content/dev-requirements-py3.txt
 ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py2.txt /content/dev-requirements-py2.txt
 ADD bootstrap /content/bootstrap
-RUN chmod +x bootstrap && NO_HOOKS=1 SETUP_PY2=yes FORCE_SETUP=yes NO_NPM=true ./bootstrap && rm bootstrap
+RUN NO_HOOKS=1 SETUP_PY2=yes FORCE_SETUP=yes NO_NPM=true ./bootstrap && rm bootstrap
 
 # apt-get Cleanup
 RUN apt-get autoremove -y \
