--- a/docker/demisto-sdk/Dockerfile
+++ b/docker/demisto-sdk/Dockerfile
@@ -33,8 +33,8 @@ ADD https://raw.githubusercontent.com/demisto/demisto-sdk/master/package-lock.js
 
 # Python requirements
 COPY requirements.txt .
+RUN python3 -m pip -V
 RUN npm ci && python3 -m pip install --no-cache-dir -r requirements.txt && rm requirements.txt
-# RUN git config --global http.sslVerify false
 
 ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py3.txt /content/dev-requirements-py3.txt
 ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py2.txt /content/dev-requirements-py2.txt
