--- a/docker/graphql/Pipfile
+++ b/docker/graphql/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 gql = "==3.1.0"
+requests-toolbelt = "<1,>=0.9.1"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
