Add pan-os-python build (#6906)
* Add pan-os-python build

* Update dependabot yml

* Update .github/dependabot.yml

Thanks Bar, did not notice this

Co-authored-by: Bar Katzir <37335599+bakatzir@users.noreply.github.com>

Co-authored-by: Bar Katzir <37335599+bakatzir@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -712,6 +712,10 @@ updates:
   - package-ecosystem: pip
     directory: /docker/py3-tools
     schedule:
+      interval: daily  
+  - package-ecosystem: pip
+    directory: /docker/pan-os-python
+    schedule:
       interval: daily
   - package-ecosystem: pip
     directory: /docker/parse-emails
