--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -725,3 +725,7 @@ updates:
     directory: /docker/demisto-sdk
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/google-api-2
+    schedule:
+     interval: daily
