--- a/.github/workflows/update-internal-base-images.yml
+++ b/.github/workflows/update-internal-base-images.yml
@@ -5,7 +5,8 @@ on:
     types: [closed]
     branches:
       - master
-
+  workflow_dispatch:
+  
 jobs:
   update-docker-files:
     if: ${{ github.event.pull_request.merged && contains(github.head_ref, 'autoupdate/') }}
