Created new docker container for ibm-db2 integration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -725,3 +725,7 @@ updates:
     directory: /docker/demisto-sdk
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/ibm-db2
+    schedule:
+     interval: daily
