Adding dependabot configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -725,3 +725,131 @@ updates:
     directory: /docker/demisto-sdk
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/accessdata
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/aiohttp
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/ami-management
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/bigquery
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/cloaken
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/dnstwist
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/fetch-data
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/google-cloud-storage
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/google-vision-api
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/hashicorp
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/imap
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/intezer
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/ippysocks
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/mlclustering
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/parse-emails
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/polyswarm
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/private-build
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/pykafka
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/py2-exchangelib
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/py3ews
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/py3-tools
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/py42
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/python-deb
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/python
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/python_pancloud
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/python_pancloud_v2
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/python3-arrow
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/sane-doc-reports
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/sendgrid
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/syslog
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/xslxwriter
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
+    directory: /docker/xml-feed/
+    schedule:
+     interval: daily
