add rubrik-rubrik-polaris-sdk-py3 to dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -729,3 +729,7 @@ updates:
     directory: /docker/ibm-db2
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/rubrik-polaris-sdk-py3
+    schedule:
+     interval: daily
