--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -733,3 +733,7 @@ updates:
     directory: /docker/rubrik-polaris-sdk-py3
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/glpi
+    schedule:
+     interval: daily
