change of builds to see if it passed

--- a/docker/content-build/Dockerfile
+++ b/docker/content-build/Dockerfile
@@ -9,6 +9,7 @@ RUN sudo apt-get update && \
 # Change virtualenv version to old version - Bug with link 2 python versions
 RUN pip uninstall -y virtualenv && pip install virtualenv==16.7.7
 
+# here to rerun!
 # install gcloud see: https://cloud.google.com/sdk/docs/downloads-apt-get
 RUN sudo apt-get update && sudo apt-get install apt-transport-https ca-certificates gnupg \
   && echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list \
