--- a/docker/flask-nginx/Dockerfile
+++ b/docker/flask-nginx/Dockerfile
@@ -18,3 +18,5 @@ COPY nginx.conf /etc/nginx/.
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git libffi-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
+
+RUN python -c "import tldextract; tldextract.extract('com')"
