run tldextract to save cache

--- a/docker/flask-nginx/Dockerfile
+++ b/docker/flask-nginx/Dockerfile
@@ -19,4 +19,6 @@ RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
 
+
+# this line is for saving cache of the list of the tld
 RUN python -c "import tldextract; tldextract.extract('com')"
